--- a/resources/style.css
+++ b/resources/style.css
@@ -302,3 +302,174 @@ and (-webkit-device-pixel-ratio: 3) {
 	text-decoration:none;
   border: 0;
 }
+
+/* VARIABLES */
+*,
+:before,
+:after {
+  box-sizing: border-box;
+}
+
+body {
+  background: #424242;
+}
+
+/* FORM */
+form {
+  width: 320px;
+  margin: 45px auto;
+}
+
+form h1 {
+  font-size: 3em;
+  font-weight: 300;
+  text-align: center;
+  color:#00AD89;
+}
+
+form h5 {
+  text-align: center;
+  text-transform: uppercase;
+  color: #d4d4d4;
+}
+
+form hr.sep {
+  color:#00AD89;
+  box-shadow: none;
+  border: none;
+  height: 2px;
+  width: 25%;
+  margin: 0px auto 45px auto;
+}
+
+form .emoji {
+  font-size: 1.2em;
+}
+
+.group {
+  position: relative;
+  margin: 45px 0;
+}
+
+/* INPUTS */
+textarea {
+  resize: none;
+}
+
+input,
+textarea {
+  background: none;
+  color: #d4d4d4;
+  font-size: 18px;
+  padding: 10px 10px 10px 5px;
+  display: block;
+  width: 320px;
+  border: none;
+  border-radius: 0;
+  border-bottom: 1px solid #d4d4d4;
+}
+
+input:focus,
+textarea:focus {
+  outline: none;
+}
+
+input:focus ~ label,
+input:valid ~ label,
+textarea:focus ~ label,
+textarea:valid ~ label {
+  top: -14px;
+  font-size: 12px;
+  color:#00AD89;
+}
+
+input:focus ~ .bar:before,
+textarea:focus ~ .bar:before {
+  width: 320px;
+}
+
+input[type="password"] {
+  letter-spacing: 0.3em;
+}
+
+label {
+  color: #d4d4d4;
+  font-size: 16px;
+  font-weight: normal;
+  position: absolute;
+  pointer-events: none;
+  left: 5px;
+  top: 10px;
+  transition: 300ms ease all;
+}
+
+.bar {
+  position: relative;
+  display: block;
+  width: 320px;
+}
+
+.bar:before {
+  content: '';
+  height: 2px;
+  width: 0;
+  bottom: 0px;
+  position: absolute;
+  background-color:#00AD89;
+  transition: 300ms ease all;
+  left: 0%;
+}
+
+/* BUTTONS */
+.btn {
+  background: #fff;
+  color: #787878;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 3px;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  text-decoration: none;
+  outline: none;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+}
+
+.btn:hover {
+  color: #6b6b6b;
+  box-shadow: 0 7px 14px rgba(0, 0, 0, 0.18), 0 5px 5px rgba(0, 0, 0, 0.12);
+}
+
+.btn.btn-link {
+  background:#00AD89;
+  color: #c3e4f7;
+}
+
+.btn.btn-link:hover {
+  background: #1976D2;
+  color: #b1dcf6;
+}
+
+.btn.btn-submit {
+  background-color:#00AD89;
+  color: #c3e4f7;
+}
+
+.btn.btn-submit:hover {
+  cursor: pointer;
+  color: white;
+}
+
+.btn.btn-cancel {
+  background: #eee;
+}
+
+.btn.btn-cancel:hover {
+  background: #dcdcdc;
+  color: #6b6b6b;
+}
+
+.btn-box {
+  text-align: center;
+  margin: 50px 0;
+}
