--- a/resources/style.css
+++ b/resources/style.css
@@ -17,7 +17,8 @@ html {
 }
 
 body{
-  font-family: 'Raleway', sans-serif; 
+  font-family: 'Anta', sans-serif;
+  font-weight: 400;
 }
 
 section {
@@ -42,7 +43,7 @@ footer {
 
 nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
 }
 
 ul {
@@ -69,8 +70,15 @@ h2 {
 }
 
 h3 {
+  font-family: 'Consolas', 'Monaco', 'Cascadia Code', 'Fira Code', 'Source Code Pro', 'SF Mono', monospace;
+  font-weight: 100;
   font-size: 25px;
   margin: 15px 0px 15px 0px;
+}
+
+h4 {
+  font-family: 'Consolas', 'Monaco', 'Cascadia Code', 'Fira Code', 'Source Code Pro', 'SF Mono', monospace;
+  font-weight: 600;
 }
 
 hr {
@@ -79,9 +87,10 @@ hr {
 
 p {
 margin: 0;
-font-size: 30px;
-font-weight: 300;
+font-size: 25px;
+font-weight: 100;
 margin-bottom: 15px;
+font-family: 'Consolas', 'Monaco', 'Cascadia Code', 'Fira Code', 'Source Code Pro', 'SF Mono', monospace;
 }
 
 a {
@@ -128,11 +137,6 @@ svg {
 
 .socials{
   float: right;
-}
-
-.logo {
-  height: 80px;
-  margin: 30px;
 }
 
 .icon {
@@ -189,15 +193,53 @@ svg {
 }
 
 .subtext {
-  font-size: 19px;
-  font-weight: 300;
-  margin: 5px;
-  line-height: 1.5;
+  font-size: 14px;
+  font-family: 'Consolas', 'Monaco', 'Cascadia Code', 'Fira Code', 'Source Code Pro', 'SF Mono', monospace;
+  font-weight: 400;
+  margin: 18px;
+  line-height: 1.4;
+  color: #555555;
+  text-align: left;
 }
 
 .view-text {
   text-decoration: none;
   color: black;
+  transition: all 0.3s ease;
+  padding: 8px 12px;
+  border-radius: 6px;
+  background-color: transparent;
+  display: inline-block;
+}
+
+.view-text:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.view-text:active {
+  background-color: rgba(0, 0, 0, 0.2);
+  color: rgb(20, 20, 20) !important;
+}
+
+.card .subtext:last-child {
+  text-align: center;
+}
+
+.view-older-btn {
+  transition: all 0.3s ease;
+  padding: 10px 15px;
+  border-radius: 8px;
+  background-color: transparent;
+  display: inline-block;
+}
+
+.view-older-btn:hover {
+  background-color: rgba(47, 49, 49, 0.1);
+}
+
+.view-older-btn:active {
+  background-color: rgba(47, 49, 49, 0.2);
+  color: rgb(30, 32, 32) !important;
 }
 
 .hamburger {
@@ -234,10 +276,6 @@ svg {
 
   nav {
     display: flex;
-  }
-
-  img.logo {
-  width: 80px;
   }
 }
 
@@ -277,10 +315,6 @@ and (-webkit-device-pixel-ratio: 3) {
     display: flex;
   }
 
-  img.logo {
-  width: 180px;
-  height: 180px;
-  }
   h1{
   font-size: 110px;
   }
